input works; displays countdown

--- a/todo
+++ b/todo
@@ -22,8 +22,11 @@ Start by getting a timer to work
 ---------------------------------
 
 Get user to set the start time
+-Completed
 -------------------------------
 
+Make it stop at 0
+--------------------------------
 
 
 
