stops at 0; now make it flash

--- a/todo
+++ b/todo
@@ -26,7 +26,10 @@ Get user to set the start time
 -------------------------------
 
 Make it stop at 0
+-Completed
 --------------------------------
 
+Indicate count with flash of screen
+-----------------------------------
 
 
