added sound; flashing

--- a/todo
+++ b/todo
@@ -30,6 +30,10 @@ Make it stop at 0
 --------------------------------
 
 Indicate count with flash of screen
+-Completed
 -----------------------------------
 
+Make a sound when counter hits 0
+-Completed
+---------------------------------
 
