added minutes & seconds inputs

--- a/todo
+++ b/todo
@@ -37,3 +37,13 @@ Make a sound when counter hits 0
 -Completed
 ---------------------------------
 
+Fun stuff/improvements:
+-change so it takes minutes and seconds.
+-add a pause button
+-improve the interface
+-make the flashes more meaningful
+-----------------------------------
+
+Change so it takes minutes and seconds.
+-Completed
+
