added reset button

--- a/todo
+++ b/todo
@@ -68,4 +68,8 @@ Add pause button and resume button
 -------------------------------
 
 Add reset button
+-completed
+---------------------------
+
+Error checking to make sure they entered something
 
