--- a/todo
+++ b/todo
@@ -87,3 +87,7 @@ when focus is removed--I think that's the trouble.
 -and cleaning up the code
 ------------------
 
+-decided to completely refactor and start over.
+-wrote out all the functions I think I'll need.
+------------------
+
