--- a/todo
+++ b/todo
@@ -91,3 +91,8 @@ when focus is removed--I think that's the trouble.
 -wrote out all the functions I think I'll need.
 ------------------
 
+-first worked on validation
+-complete
+--------------------
+-make it count down
+
