mostly working, add flashes

--- a/todo
+++ b/todo
@@ -95,4 +95,11 @@ when focus is removed--I think that's the trouble.
 -complete
 --------------------
 -make it count down
+-completed
+--------------------
+
+-got most things working
+-need to work on styles and adding and subtracting styles
+--------
+
 
