--- a/todo
+++ b/todo
@@ -102,4 +102,11 @@ when focus is removed--I think that's the trouble.
 -need to work on styles and adding and subtracting styles
 --------
 
+-added a red flash when done
+-fixed validation problem
+
+------
+
+would like to add more stylish buttons and improve the display
+-also clean up the code a bit.
 
